Revert "[AutofillAI - M4] Write render tests for the EntityEditor."
This reverts commit f6b154b9e22943502cf055fb4fddf49946c59e79.

Reason for revert: Failing android-14-tablet-landscape-arm64-rel. More info in https://b.corp.google.com/issues/492546769.

Original change's description:
> [AutofillAI - M4] Write render tests for the EntityEditor.
>
> Bug: 476755159
> Change-Id: Ia667ac25a61fbde7329e27e365e7861a8aee4d42
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7661865
> Reviewed-by: Friedrich Hauser <friedrichh@chromium.org>
> Commit-Queue: Timofey Chudakov <tchudakov@google.com>
> Cr-Commit-Position: refs/heads/main@{#1598997}

Bug: 476755159
No-Presubmit: true
No-Tree-Checks: true
No-Try: true
Change-Id: I18b375d5d63ef8be608ce6bd6b1f39952b871acb
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7666902
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Joel Tan-Aristy <jtanaristy@google.com>
Owners-Override: Joel Tan-Aristy <jtanaristy@google.com>
Cr-Commit-Position: refs/heads/main@{#1599218}