@@ -4,10 +4,6 @@
 
 package org.chromium.components.autofill.autofill_ai.utils;
 
-import org.chromium.components.autofill.FieldType;
-import org.chromium.components.autofill.autofill_ai.AttributeType;
-import org.chromium.components.autofill.autofill_ai.AttributeTypeName;
-import org.chromium.components.autofill.autofill_ai.DataType;
 import org.chromium.components.autofill.autofill_ai.EntityInstance;
 import org.chromium.components.autofill.autofill_ai.EntityInstanceWithLabels;
 import org.chromium.components.autofill.autofill_ai.EntityType;
@@ -16,7 +12,6 @@ import org.chromium.components.autofill.autofill_ai.EntityTypeName;
 import java.time.LocalDate;
 import java.time.ZoneId;
 import java.util.Collections;
-import java.util.List;
 import java.util.UUID;
 
 public final class TestUtils {
@@ -42,46 +37,6 @@ public final class TestUtils {
         return getVehicleEntityType(/* isReadOnly= */ false, /* isEnabled= */ true);
     }
 
-    public static AttributeType getPassportNameAttributeType() {
-        return new AttributeType(
-                /* typeName= */ AttributeTypeName.PASSPORT_NAME,
-                /* typeNameAsString= */ "Passport name",
-                /* dataType= */ DataType.NAME,
-                /* fieldType= */ FieldType.NAME_FULL);
-    }
-
-    public static AttributeType getPassportCountryAttributeType() {
-        return new AttributeType(
-                /* typeName= */ AttributeTypeName.PASSPORT_COUNTRY,
-                /* typeNameAsString= */ "Passport country",
-                /* dataType= */ DataType.COUNTRY,
-                /* fieldType= */ FieldType.PASSPORT_ISSUING_COUNTRY);
-    }
-
-    public static AttributeType getPassportNumberAttributeType() {
-        return new AttributeType(
-                /* typeName= */ AttributeTypeName.PASSPORT_NUMBER,
-                /* typeNameAsString= */ "Passport number",
-                /* dataType= */ DataType.STRING,
-                /* fieldType= */ FieldType.PASSPORT_NUMBER);
-    }
-
-    public static AttributeType getPassportIssueDateAttributeType() {
-        return new AttributeType(
-                /* typeName= */ AttributeTypeName.PASSPORT_ISSUE_DATE,
-                /* typeNameAsString= */ "Issue date",
-                /* dataType= */ DataType.DATE,
-                /* fieldType= */ FieldType.PASSPORT_ISSUE_DATE);
-    }
-
-    public static AttributeType getPassportExpirationDateAttributeType() {
-        return new AttributeType(
-                /* typeName= */ AttributeTypeName.PASSPORT_EXPIRATION_DATE,
-                /* typeNameAsString= */ "Expiration date",
-                /* dataType= */ DataType.DATE,
-                /* fieldType= */ FieldType.PASSPORT_EXPIRATION_DATE);
-    }
-
     public static EntityType getPassportEntityType(boolean isReadOnly, boolean isEnabled) {
         return new EntityType(
                 EntityTypeName.PASSPORT,
@@ -92,13 +47,8 @@ public final class TestUtils {
                 /* addEntityTypeString= */ "Add passport",
                 /* editEntityTypeString= */ "Edit passport",
                 /* deleteEntityTypeString= */ "Delete passport",
-                /* attributeTypes= */ List.of(
-                        getPassportNameAttributeType(),
-                        getPassportCountryAttributeType(),
-                        getPassportNumberAttributeType(),
-                        getPassportIssueDateAttributeType(),
-                        getPassportExpirationDateAttributeType()),
-                /* requiredAttributes= */ List.of(getPassportNumberAttributeType()));
+                /* attributeTypes= */ Collections.emptyList(),
+                /* requiredAttributes= */ Collections.emptyList());
     }
 
     public static EntityType getPassportEntityType() {
